local/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap');

:root {
    /* Default Mode Colors */
	--blue: #0079FF;
	--blue--hover: #60ABFF;
	--gray: #697C9A;
	--medium-blue: #4B6A9B;
	--medium-blue--hover: #222731;
	--medium-blue--unavailable: #4B6A9B88;
	--dark-gray-1: #2B3442;
	--gray-white: #F6F8FF;
	--white-1: #FEFEFE;
	--black-1: #222731;
	/* Alt Mode Colors */
	--white-2: #FFFFFF;
	--white-2--hover: #90A4D4;
	--dark-gray-2: #141D2F;
	--dark-cool-gray: #1E2A47;
}

html {
	box-sizing: border-box;
}

*,
*::before,
*::after {
	box-sizing: inherit;
}

body,
h1,
h2,
h3,
h4 {
	font-family: 'Space Mono', Monospace;
	margin: 0;
	padding: 0;
}

body {
	font-size: 0.8125rem;
	line-height: 1.5625rem;
	font-weight: 400;
	background-color: var(--gray-white);
}

h1 {
	font-size: 1.625rem;
	line-height: 2.4375rem;
	font-weight: 700;
}

h2 {
	font-size: 1rem;
	line-height: 1.5rem;
	font-weight: 700;	
}

h3 {
	font-size: 0.8125rem;
	line-height: 1.1875rem;
	font-weight: 400;
}

h4 {
	font-size: 0.6875rem;
	line-height: 1rem;
	font-weight: 400;
}

.container {
	padding: 2rem 1.5rem; 
}

/********************
 * Title-bar *
 *******************/

.app-title {
	color: var(--black-1);
}

.mode-name {
	font-size: 0.8125rem;
	line-height: 0.8125rem;
	font-weight: 700;
	color: var(--medium-blue);
	margin-right: 1rem;
}

.title-bar {
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: space-between;
	margin-bottom: 2.25rem;
}

.ui-mode-toggle {
	display: flex;
	flex-direction: row;
	align-items: center;
}

.ui-mode-toggle:hover {
	cursor: pointer;
}

.ui-mode-toggle:hover .mode-name {
	color: var(--medium-blue--hover);
}

.ui-mode-toggle:hover .mode-icon {
	fill: var(--medium-blue--hover);
}

/********************
 * Search-bar *
 *******************/

.search-bar {
	margin-bottom: 1rem;
}

.search-container {
	display: flex;
	flex-direction: row;
	background-color: white;
	align-items: center;
	/*justify-content: space-between;*/
	padding: 0.4375rem;
	border-radius: 16px;
	box-shadow: 2px 2px 18px 8px #4B6A9B0F;
}

.bar-left-wrapper {
	display: flex;
	flex-direction: row;
	align-items: center;
	flex-grow: 1;
}

.search-icon-wrapper {
	display: flex;
	align-items: center;
	justify-content: center;
	width: 2.375rem;
}

.search-input {
	flex-grow: 1;
	border: none;
}

.search-input:hover {
	cursor: pointer;
}

.search-input:focus {
	outline: none;
}

.search-button {
	font-size: 0.875rem;
	font-weight: 700;
	line-height: 1.3125rem;
	color: white;
	background-color: var(--blue);
	padding: 0.8125rem 1.125rem;
	border: none;
	border-radius: 10px;
}

.search-button:hover {
	background-color: var(--blue--hover);
	cursor: pointer;
}

/*********************
 * User-Profile-Card *
 *********************/

.user-profile-card {
	background-color: white;
	display: flex;
	flex-direction: column;
	padding: 1.5rem 2rem;
	margin-bottom: 3rem;
	border-radius: 16px;
	box-shadow: 2px 2px 18px 8px #4B6A9B0F;
}

.avatar-wrapper--desktop {
	display: none;
}

.avatar-wrapper--mobile {
	width: 4.375rem;
	height: 4.375rem;
	margin-right: 2rem;
}

.avatar {
	width: 100%;
	border-radius: 50%;
}

.user-info {
	display: flex;
	flex-direction: column;
	margin-bottom: 1.4375rem;
}

.info-outer-wrapper {
	display: flex;
	flex-direction: row;
	margin-bottom: 2.0625rem;
}

.info-inner-wrapper{
	display: flex;
	flex-direction: column;
}

.user-name {
	color: var(--dark-gray-1);
	font-size: 1rem;
	line-height: 1.5rem;
}

.user-link {
	color: var(--blue);
}

.join-date {
	color: var(--gray);
	line-height: 1.1875rem;
	margin: 0;
}

.user-description {
	color: var(--medium-blue);
	line-height: 1.5625rem;
	margin: 0;
}

/*********************
 * Stats-Container *
 *********************/

.stats-container {
	background-color: var(--gray-white);
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	padding: 1.125rem 2.375rem;
	margin-bottom: 1.5rem;
	border-radius: 10px;
}

.data-wrapper {
	display: flex;
	flex-direction: column;
	align-items: center;
}

.stats-heading {
	color: var(--medium-blue);
	margin-bottom: 0.5rem;
}

.stats-data {
	color: var(--dark-gray-1);
}

/*******************
 * About-container *
 *******************/

.about-container {
	display: flex;
	flex-direction: column;
}

.about-inner-wrapper {
	display: flex;
	flex-direction: row;
	align-items: center;
	margin-bottom: 1rem;
}

.about-data {
	color: var(--medium-blue);
	margin: 0;
}

.about-data.unavailable {
	color: var(--medium-blue--unavailable);
}

.blog-link a {
	text-decoration: none;
	color: var(--medium-blue);
}

.blog-link a:hover {
	text-decoration: underline;
	cursor: pointer;
}

.icon-wrapper {
	width: 2rem;
	display: flex;
}

.about-icon .unavailable {
	fill: var(--medium-blue--unavailable);
}

.location-icon {
	height: 1.25rem;
	width: 0.859375rem;
}

.blog-icon {
	height: 1.25rem;
	width: 1.25rem
}

.twitter-icon {
	height: 1.125rem;
	width: 1.25rem;
}

.hub-icon {
	height: 1.25rem;
	width: 1.25rem;
}

/********************
 * Alt-mode styling *
 ********************/

body .alt-mode{
	background-color: var(--dark-gray-2);
}

/********************
 * Title-bar *
 *******************/

.app-title .alt-mode {
	color: var(--white-2); 
}

.mode-name .alt-mode {
	color: var(--white-2);
	display: none;
}

.ui-mode-toggle .alt-mode {
	display: none;
}

.ui-mode-toggle:hover .alt-mode {
}

.ui-mode-toggle:hover .mode-name .alt-mode {
	color: var(--white-2--hover);
}

.ui-mode-toggle:hover .mode-icon .alt-mode {
	fill: var(--white-2--hover);
}

/********************
 * Search-bar *
 *******************/

.search-container .alt-mode {
	background-color: var(--dark-cool-gray);
	box-shadow: 2px 2px 18px 8px #000000;
}

/*********************
 * User-Profile-Card *
 *********************/

.user-profile-card .alt-mode {
	background-color: var(--dark-cool-gray);
	box-shadow: 2px 2px 18px 8px #000000;
}

.user-name .alt-mode {
	color: var(--white-2);
}

.join-date .alt-mode {
	color: var(--white-2);
}

.user-description .alt-mode {
	color: var(--white-2);
}

/*********************
 * Stats-Container *
 *********************/

.stats-container .alt-mode {
	background-color: var(--dark-gray-2);
}

.stats-heading .alt-mode {
	color: var(--white-2);
}

.stats-data .alt-mode {
	color: var(--white-2);
}

/*******************
 * About-container *
 *******************/

.about-data .alt-mode {
	color: var(--white-2);
}

.about-data.unavailable .alt-mode{
	color: var(--medium-blue--unavailable);
}

.blog-link a .alt-mode{
	color: var(--white-2);
}

.about-icon .unavailable .alt-mode {
	fill: var(--medium-blue--unavailable);
}

/*****************
 * Tablet styles *
 *****************/

@media screen and (min-width: 768px) {

	body {
		font-size: 0.9375rem;
	}

	h2 {
		font-size: 1.625rem;
		line-height: 2.4375rem;
		font-weight: 700;
	}

	h3 {
		font-size: 1rem;
		line-height: 1.5rem;
	}

	h4 {
		font-size: 0.8125rem;
		line-height: 1.1875rem;
	}

	.container {
		padding: 8.75rem 6.0625rem; 
	}

	/********************
	 * Title-bar *
	 *******************/
	/********************
	 * Search-bar *
	 *******************/

	.search-bar {
		margin-bottom: 1.5rem;
	}

	.search-container {
		padding: 0.625rem;
		box-shadow: 2px 2px 18px 8px #4B6A9B0F;
	}

	.search-icon-wrapper {
		width: 4.375rem;
	}

	.search-button {
		font-size: 1rem;
		line-height: 1.5rem;
		padding: 0.8125rem 1.5rem;
	}

	/*********************
	 * User-Profile-Card *
	 *********************/

	.user-profile-card {
		padding: 2.5rem;
		margin-bottom: 6rem;
		box-shadow: 2px 2px 18px 8px #4B6A9B0F;
	}

	.avatar-wrapper--mobile {
		width: 7.3125rem;
		height: 7.3125rem;
		margin-right: 2.3125rem;
	}

	.user-info {
		margin-bottom: 2rem;
	}

	.info-outer-wrapper {
		margin-bottom: 1.5rem;
	}

	.info-inner-wrapper {
		justify-content: center;
	}

	.user-name {
		font-size: 1.625rem;
		line-height: 2.4375rem;
	}

	.join-date {
		line-height: 1.375rem;
	}

	/*********************
	 * Stats-Container *
	 *********************/

	.stats-container {
		display: flex;
		flex-direction: row;
		justify-content: flex-start;
		padding: 0.9375rem 2rem;
		margin-bottom: 1.875rem;
	}

	.data-wrapper {
		align-items: normal;
		width: 8.5rem;
	}

	.data-wrapper:nth-of-type(2) {
		margin-left: 0.3125rem;
	}

	.data-wrapper:nth-of-type(3) {
		margin-left: 1.125rem;
		margin-bottom: 0.125rem;
	}

	.stats-heading {
		margin-bottom: 0rem;
	}

	.stats-data {
		font-size: 1.375rem;
		line-height: 2.0625rem;
	}

	/*******************
	 * About-container *
	 *******************/

	.about-container {
		flex-direction: row;
	}
	
	.about-right-wrapper,
	.about-left-wrapper {
		width: 13.75rem;
	}
	
	.about-right-wrapper > div:last-child,
	.about-left-wrapper > div:last-child {
		margin-bottom: 0rem;
	}
	
	.about-right-wrapper {
		margin-left: 3.3125rem;
	}

	.about-inner-wrapper {
		margin-bottom: 1.1875rem;
	}

	.about-data {
		line-height: 1.375rem;	
	}
}

